--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -14,11 +14,13 @@ samsung_ipcinclude_HEADERS = \
 	types.h \
 	util.h \
 	gprs.h \
+	snd.h \
 	$(NULL)
 
 samsung_ipc_h1includedir = $(includedir)/samsung-ipc-1.0/device/h1/
 samsung_ipc_h1include_HEADERS = \
 	device/h1/call.h \
+	device/h1/sms.h \
 	device/h1/net.h \
 	device/h1/misc.h \
 	device/h1/gen.h
