Add aries device for compilation and register it's handlers on startup
Signed-off-by: Simon Busch <morphis@gravedo.de>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -26,9 +26,9 @@ libsamsung_ipc_la_SOURCES = \
 	gprs.c \
 	call.c \
 	net.c \
-	sms.c \
 	\
 	device/crespo/crespo_ipc.c \
+	device/aries/aries_ipc.c \
 	$(NULL)
 
 AM_CFLAGS += -DDEVICE_IPC_V4
