--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -27,3 +27,12 @@ samsung_ipc_v4include_HEADERS = \
 	device/ipc-v4/misc.h \
 	device/ipc-v4/gen.h \
 	$(NULL)
+
+samsung_ipc_h1includedir = $(includedir)/samsung-ipc-1.0/device/h1/
+samsung_ipc_h1include_HEADERS = \
+	device/h1/net.h \
+	device/h1/sms.h \
+	device/h1/misc.h \
+	device/h1/gen.h \
+	device/h1/call.h \
+	$(NULL)
