--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -26,6 +26,7 @@ samsung_ipc_v4include_HEADERS = \
 	device/ipc-v4/sms.h \
 	device/ipc-v4/misc.h \
 	device/ipc-v4/gen.h \
+	device/ipc-v4/disp.h \
 	$(NULL)
 
 samsung_ipc_h1includedir = $(includedir)/samsung-ipc-1.0/device/h1/
