--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -3,6 +3,7 @@ NULL =
 AM_CFLAGS = \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/samsung-ipc \
+	-I$(top_srcdir)/samsung-ipc/device/xmm6260 \
 	$(OPENSSL_CFLAGS) \
 	$(NULL)
 
@@ -36,16 +37,18 @@ libsamsung_ipc_la_SOURCES = \
 	device/aries/phonet.h \
 	device/crespo/crespo_modem_ctl.h \
 	device/crespo/crespo_ipc.h \
-	device/xmm6260/common.h \
-	device/xmm6260/fwloader_i9100.c \
-	device/xmm6260/fwloader_i9250.c \
-	device/xmm6260/io_helpers.c \
-	device/xmm6260/io_helpers.h \
-	device/xmm6260/modem_prj.h \
-	device/xmm6260/modemctl_common.c \
-	device/xmm6260/modemctl_common.h \
+	device/xmm6260/xmm6260_loader.c \
+	device/xmm6260/xmm6260_loader.h \
+	device/xmm6260/xmm6260_modemctl.c \
+	device/xmm6260/xmm6260_modemctl.h \
 	device/xmm6260/xmm6260_ipc.c \
 	device/xmm6260/xmm6260_ipc.h \
+	device/galaxys2/galaxys2_loader.c \
+	device/galaxys2/galaxys2_loader.h \
+	device/galaxys2/galaxys2_ipc.c \
+	device/maguro/maguro_loader.c \
+	device/maguro/maguro_loader.h \
+	device/maguro/maguro_ipc.c \
 	$(NULL)
 
 AM_CFLAGS += -DDEVICE_IPC_V4
