Make wakelocks not crespo-specific and add for xmm6260

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -26,6 +26,7 @@ libsamsung_ipc_la_SOURCES = \
 	gprs.c \
 	call.c \
 	net.c \
+	wakelock.c \
 	ipc_private.h \
 	ipc_devices.h \
 	device/crespo/crespo_ipc.c \
