Drop support for the (incomplete) old protocol implementation used on H1.
Also refactor headers: values aligned to 16x4 spaces and other cosmetics

Change-Id: I5a6f2c2471599c88c4be74591117d0ab2dfaaddf
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>

--- a/samsung-ipc-1.0.pc.in
+++ b/samsung-ipc-1.0.pc.in
@@ -10,4 +10,4 @@ Description: A implemenation of the protocol to speak with modems found in most 
 Version: @VERSION@
 Requires:
 Libs: -L${libdir} -lsamsung-ipc
-Cflags: -I${includedir}/samsung-ipc-1.0 -DDEVICE_IPC_V4
+Cflags: -I${includedir}/samsung-ipc-1.0
