Renamed ipc_private.h to ipc.h
Change-Id: Ie80159518b6d7d1a6422d3dc47a903eb7fdad6d8
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -28,7 +28,7 @@ libsamsung_ipc_la_SOURCES = \
 	call.c \
 	net.c \
 	wakelock.c \
-	ipc_private.h \
+	ipc.h \
 	ipc_devices.h \
 	device/crespo/crespo_ipc.c \
 	device/aries/aries_ipc.c \
