New utilities (not exposed by the API) for various I/O and ipc fill functions
Change-Id: I0bd1d7781971f217903f307b5ac418180afc0d50
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -27,8 +27,10 @@ libsamsung_ipc_la_SOURCES = \
 	gprs.c \
 	call.c \
 	net.c \
+	util.c \
 	ipc.h \
 	ipc_devices.h \
+	util.h \
 	device/crespo/crespo_ipc.c \
 	device/aries/aries_ipc.c \
 	device/aries/sipc4.h \
