Samsung Galaxy S3 (galaxys3) support
Change-Id: If37a94d07129c37b8e4f647b479552dc60de90a3
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -55,6 +55,8 @@ libsamsung_ipc_la_SOURCES = \
 	device/aries/phonet.h \
 	device/galaxys2/galaxys2_ipc.c \
 	device/galaxys2/galaxys2_ipc.h \
+	device/galaxys3/galaxys3_ipc.c \
+	device/galaxys3/galaxys3_ipc.h \
 	device/maguro/maguro_ipc.c \
 	device/maguro/maguro_ipc.h \
 	device/piranha/piranha_ipc.c \
