devices folder instead of device, for better consistency
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -3,8 +3,8 @@ NULL =
 AM_CFLAGS = \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/samsung-ipc \
-	-I$(top_srcdir)/samsung-ipc/device/xmm6160 \
-	-I$(top_srcdir)/samsung-ipc/device/xmm6260 \
+	-I$(top_srcdir)/samsung-ipc/devices/xmm6160 \
+	-I$(top_srcdir)/samsung-ipc/devices/xmm6260 \
 	$(OPENSSL_CFLAGS) \
 	$(NULL)
 
@@ -22,36 +22,36 @@ libsamsung_ipc_la_SOURCES = \
 	ipc_devices.c \
 	ipc_devices.h \
 	ipc_util.c \
-	device/xmm6160/xmm6160.c \
-	device/xmm6160/xmm6160.h \
-	device/xmm6260/xmm6260.c \
-	device/xmm6260/xmm6260.h \
-	device/xmm6260/xmm6260_hsic.c \
-	device/xmm6260/xmm6260_hsic.h \
-	device/xmm6260/xmm6260_mipi.c \
-	device/xmm6260/xmm6260_mipi.h \
-	device/xmm6260/xmm6260_sec_modem.c \
-	device/xmm6260/xmm6260_sec_modem.h \
-	device/xmm6260/modem.h \
-	device/xmm6260/modem_link_device_hsic.h \
-	device/xmm6260/modem_prj.h \
-	device/crespo/crespo_ipc.c \
-	device/crespo/crespo_ipc.h \
-	device/crespo/crespo_modem_ctl.h \
-	device/aries/aries_ipc.c \
-	device/aries/aries_ipc.h \
-	device/aries/onedram.h \
-	device/aries/phonet.h \
-	device/galaxys2/galaxys2_ipc.c \
-	device/galaxys2/galaxys2_ipc.h \
-	device/maguro/maguro_ipc.c \
-	device/maguro/maguro_ipc.h \
-	device/piranha/piranha_ipc.c \
-	device/piranha/piranha_ipc.h \
-	device/i9300/i9300_ipc.c \
-	device/i9300/i9300_ipc.h \
-	device/n7100/n7100_ipc.c \
-	device/n7100/n7100_ipc.h \
+	devices/xmm6160/xmm6160.c \
+	devices/xmm6160/xmm6160.h \
+	devices/xmm6260/xmm6260.c \
+	devices/xmm6260/xmm6260.h \
+	devices/xmm6260/xmm6260_hsic.c \
+	devices/xmm6260/xmm6260_hsic.h \
+	devices/xmm6260/xmm6260_mipi.c \
+	devices/xmm6260/xmm6260_mipi.h \
+	devices/xmm6260/xmm6260_sec_modem.c \
+	devices/xmm6260/xmm6260_sec_modem.h \
+	devices/xmm6260/modem.h \
+	devices/xmm6260/modem_link_device_hsic.h \
+	devices/xmm6260/modem_prj.h \
+	devices/crespo/crespo_ipc.c \
+	devices/crespo/crespo_ipc.h \
+	devices/crespo/crespo_modem_ctl.h \
+	devices/aries/aries_ipc.c \
+	devices/aries/aries_ipc.h \
+	devices/aries/onedram.h \
+	devices/aries/phonet.h \
+	devices/galaxys2/galaxys2_ipc.c \
+	devices/galaxys2/galaxys2_ipc.h \
+	devices/maguro/maguro_ipc.c \
+	devices/maguro/maguro_ipc.h \
+	devices/piranha/piranha_ipc.c \
+	devices/piranha/piranha_ipc.h \
+	devices/i9300/i9300_ipc.c \
+	devices/i9300/i9300_ipc.h \
+	devices/n7100/n7100_ipc.c \
+	devices/n7100/n7100_ipc.h \
 	util.c \
 	util.h \
 	call.c \
