Add generic device
TODO:
- Add more debug about /dev/xmm6262_boot0
  The log should tell why it's failing
- Trying to open /dev/block/... but doesn't print any success
- Move verbose errors with permissions issues on /dev/umts
  (.open())

Signed-off-by: Simon Shields <simon@lineageos.org>
GNUtoo@cyberdimension.org: [rebase, fixes and cleanups]
Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@cyberdimension.org>

--- a/samsung-ipc/devices/Makefile.am
+++ b/samsung-ipc/devices/Makefile.am
@@ -22,4 +22,6 @@ libsamsung_ipc_la_SOURCES += \
 	devices/n5100/n5100.h \
 	devices/herolte/herolte.c \
 	devices/herolte/herolte.h \
+	devices/generic/generic.c \
+	devices/generic/generic.h \
 	$(NULL)
