checkpatch: ignore files added, moved, deleted warning
Without that patch we always have the following warning when adding,
moving, or deleting files when using checkpatch.pl:
  WARNING: added, moved or deleted file(s), does MAINTAINERS need updating?
  #93:
  new file mode 100644

Since we have only one maintainer for now, we can safely ignore that
warning and add it back as soon as we have a second co-maintainer
on board.

Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@cyberdimension.org>

--- a/.checkpatch.conf
+++ b/.checkpatch.conf
@@ -14,3 +14,10 @@
 --ignore PREFER_PRINTF
 --ignore PREFER_SCANF
 --ignore PREFER_SECTION
+
+# We currently have only one maintainer. It would be great to have more
+# co-maintainers, however until then we don't need to check for file patch
+# changes. Feel free to step in if you want to maintain the devices you added,
+# especially if it's a device that is not supported by Replicant or that
+# Replicant doesn't want to support for some reason.
+--ignore FILE_PATH_CHANGES
