samsung-ipc: move TOC handling in its own directory
This could enable other devices to use the TOC handling functions.

Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@cyberdimension.org>

--- a/samsung-ipc/Makefile.am
+++ b/samsung-ipc/Makefile.am
@@ -32,6 +32,7 @@ libsamsung_ipc_la_SOURCES = \
 
 include devices/Makefile.am
 include modems/Makefile.am
+include partitions/Makefile.am
 
 libsamsung_ipc_la_LIBADD = \
 	$(OPENSSL_LIBS) \
