samsung-ipc: move Android partition handling in its own directory
This code could also be useful for other devices and in any cases
it's not device specific.

Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@cyberdimension.org>

--- a/samsung-ipc/partitions/Makefile.am
+++ b/samsung-ipc/partitions/Makefile.am
@@ -1,4 +1,6 @@
 libsamsung_ipc_la_SOURCES += \
+	partitions/android/android.c \
+	partitions/android/android.h \
 	partitions/toc/toc.c \
 	partitions/toc/toc.h \
 	$(NULL)
