Partitions: android: add tests for open_android_modem_partition
Libraries typically have a public API and some internal
implementation of that API. In libsamsung-ipc, the public
API is defined in the include/ directory from the top directory.

When compiling and installing libsamsung-ipc, that include/
directory is installed as well.

Anything that is not defined in include/ is not part of that
public API.

However here we need to precisely test functions that are not
part of that public API: The open_android_modem_partition
function being tested here is only used by the herolte device,
and that device doesn't have a battery that is easily replaceable,
so most Replicant contributors will not want to get that device.

As currently all the non static symbols of libsamsung-ipc are
exported and that open_android_modem_partition isn't static,
we can simply link to libsamsung-ipc for now and use its
internal headers to access the functions to test.

If at some point, libsamsung-ipc only exports the symbols defined
in include/ we would need to find other ways to run such tests,
for instance by using test frameworks that take care of that or by
compiling libsamsung-ipc source code into the test programs.

Some of the code of the libsamsung-ipc-test utility was adapted
from code from the nv_data-md5 utility (which is currently in
tools/).

Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@cyberdimension.org>

--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,7 @@ AC_CONFIG_FILES([
     samsung-ipc.pc
     include/Makefile
     samsung-ipc/Makefile
+    samsung-ipc/tests/Makefile
     tools/Makefile
 ])
 AC_OUTPUT
